--- a/README
+++ b/README
@@ -4,31 +4,40 @@ OpenGL plugin for the GStreamer 0.10 multimedia framework
 
 Runtime requirements:
   cygwin-1.5.25-15
-  glib2-2.16.3-1
-  gstreamer010-0.10.20-1
-  gstreamer010-plugins-base-0.10.20-1
-  libGL1-7.0.3-1
+  libgdk_pixbuf2.0_0-2.14.7-1
+  libGL1-7.2-2
+  libGLEW1.5-1.5.1-1
+  libglib2.0_0-2.18.4-1
+  libGLU1-7.2-2
+  libgstinterfaces0.10_0-0.10.22-1
+  libgstreamer0.10_0-0.10.22-1
+  libgstvideo0.10_0-0.10.22-1
   libintl8-0.15-1
   libX11_6-1.1.3-1
 
 Build requirements:
 (besides corresponding devel packages)
-  autoconf2.5-2.61-1
-  automake1.10-1.10.1-1
-  binutils-20080523-1
-  cygport-0.3.12-1
+  autoconf2.5-2.63-1
+  automake1.10-1.10.1-2
+  binutils-20080624-2
+  cvs
+  cygport-0.4.3-1
   gawk-3.1.6-1
   gcc-core-3.4.4-3
-  libtool-2.2.2-2
+  gettext-devel-0.17-2
+  gtk-doc-1.11-1
+  libtool-2.2.6a-1
   make-3.81-1
   pkg-config-0.23a-2
+  python-2.5.4-1
+  python-xml-0.8.3-2
   sed-4.1.5-2
 
 Canonical website:
   http://gstreamer.freedesktop.org/
 
 Canonical download:
-  CVS
+  http://diracvideo.org/git/gst-plugins-gl.git
 
 -------------------------------------------
 
@@ -42,8 +51,8 @@ Build instructions:
 This will create:
   /usr/src/gstreamer010-plugins-gl-0.10.0.1-X-src.tar.bz2
   /usr/src/gstreamer010-plugins-gl-0.10.0.1-X.tar.bz2
-  /usr/src/libgstgl0.10-0.10.0.1-X.tar.bz2
   /usr/src/libgstgl0.10-devel-0.10.0.1-X.tar.bz2
+  /usr/src/libgstgl0.10_0-0.10.0.1-X.tar.bz2
 
 -------------------------------------------
 
@@ -62,16 +71,15 @@ Files included in the binary packages:
   /usr/share/doc/gstreamer010-plugins-gl-0.10.0.1/README
   /usr/share/locale/en/LC_MESSAGES/gst-plugins-gl-0.10.mo
 
-(libgstgl0.10)
+(libgstgl0.10_0)
   /usr/bin/cyggstgl-0.10-0.dll
 
 (libgstgl0.10-devel)
-  /usr/include/gstreamer-0.10/gst/gl/glextensions.h
   /usr/include/gstreamer-0.10/gst/gl/gstglbuffer.h
   /usr/include/gstreamer-0.10/gst/gl/gstgldisplay.h
   /usr/include/gstreamer-0.10/gst/gl/gstglfilter.h
-  /usr/include/gstreamer-0.10/gst/gl/gstglprogram.h
   /usr/include/gstreamer-0.10/gst/gl/gstglshader.h
+  /usr/include/gstreamer-0.10/gst/gl/gstglwindow.h
   /usr/lib/libgstgl-0.10.dll.a
   /usr/lib/libgstgl-0.10.la
   /usr/lib/pkgconfig/gstreamer-gl-0.10.pc
@@ -79,6 +87,9 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 0.10.0.1-2 -----
+Update to git master, rev d58658cd.
 
 ----- version 0.10.0.1-1 -----
 Initial release for Cygwin.
