--- a/README
+++ b/README
@@ -3,36 +3,35 @@ gstreamer010-plugins-gl
 OpenGL plugin for the GStreamer 0.10 multimedia framework
 
 Runtime requirements:
-  cygwin-1.7.0-50
-  libgcc1-4.3.2-2
-  libGL1-7.4.4-1
+  cygwin-1.7.7-1
+  libgcc1-4.5.0-1
+  libGL1-7.6.1-1
   libGLEW1.5-1.5.1-10
-  libglib2.0_0-2.20.4-1
-  libGLU1-7.4.4-1
-  libgstinterfaces0.10_0-0.10.23-1
-  libgstreamer0.10_0-0.10.23-1
-  libgstvideo0.10_0-0.10.23-1
+  libglib2.0_0-2.24.1-1
+  libGLU1-7.6.1-1
+  libgstinterfaces0.10_0-0.10.30-1
+  libgstreamer0.10_0-0.10.30-1
   libintl8-0.17-11
-  libpng12-1.2.35-10
-  libX11_6-1.2.1-1
+  libpng14-1.4.3-2
+  libX11_6-1.3.5-1
 
 Build requirements:
 (besides corresponding devel packages)
-  autoconf2.5-2.63-10
-  automake1.10-1.10.2-10
-  binutils-2.19.51-1
-  cygport-0.9.7-1
-  gawk-3.1.6-2
-  gcc4-core-4.3.2-2
+  autoconf2.5-2.65-1
+  automake1.11-1.11.1-1
+  binutils-2.20.51-2
+  cygport-0.10.0-1
+  gawk-3.1.7-1
+  gcc4-core-4.5.0-1
   gettext-devel-0.17-11
-  gtk-doc-1.11-2
-  libgdk_pixbuf2.0-devel-2.16.3-1
-  libgtk2.0-devel-2.16.3-1
-  libtool-2.2.7a-13
+  gtk-doc-1.15-1
+  libgdk_pixbuf2.0-devel-2.20.1-1
+  libgtk2.0-devel-2.20.1-1
+  libtool-2.2.7a-15
   make-3.81-2
   pkg-config-0.23b-10
-  python-2.5.4-10
-  sed-4.1.5-2
+  python-2.6.5-2
+  sed-4.2.1-1
 
 Canonical website:
   http://gstreamer.freedesktop.org/
@@ -43,91 +42,24 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack gstreamer010-plugins-gl-0.10.1-X-src.tar.bz2
+  unpack gstreamer010-plugins-gl-0.10.2-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./gstreamer010-plugins-gl-0.10.1-X.cygport all
+  cygport ./gstreamer010-plugins-gl-0.10.2-X.cygport all
 
 This will create:
-  /usr/src/gstreamer010-plugins-gl-0.10.1-X-src.tar.bz2
-  /usr/src/gstreamer010-plugins-gl-0.10.1-X.tar.bz2
-  /usr/src/libgstgl0.10-devel-0.10.1-X.tar.bz2
-  /usr/src/libgstgl0.10_0-0.10.1-X.tar.bz2
+  /usr/src/gstreamer010-plugins-gl-0.10.2-X-src.tar.bz2
+  /usr/src/gstreamer010-plugins-gl-0.10.2-X.tar.bz2
+  /usr/src/libgstgl0.10-devel-0.10.2-X.tar.bz2
+  /usr/src/libgstgl0.10_1-0.10.2-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary packages:
-
-(gstreamer010-plugins-gl)
-  /usr/lib/gstreamer-0.10/cyggstopengl.dll
-  /usr/lib/gstreamer-0.10/libgstopengl.la
-  /usr/share/doc/gstreamer0.10-plugins-gl/AUTHORS
-  /usr/share/doc/gstreamer0.10-plugins-gl/COPYING
-  /usr/share/doc/gstreamer0.10-plugins-gl/COPYING.LIB
-  /usr/share/doc/gstreamer0.10-plugins-gl/ChangeLog
-  /usr/share/doc/gstreamer0.10-plugins-gl/NEWS
-  /usr/share/doc/gstreamer0.10-plugins-gl/README
-  /usr/share/doc/gstreamer0.10-plugins-gl/TODO
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/ch01.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/ch02.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-0.10.devhelp
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-0.10.devhelp2
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glbumper.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glcolorscale.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-gldownload.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-gleffects.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glfilterapp.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glfiltercube.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glfilterglass.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glfilterlaplacian.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glimagesink.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-gltestsrc.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-glupload.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/gst-plugins-gl-plugins-plugin-opengl.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/home.png
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/index.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/index.sgml
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/left.png
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/right.png
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/style.css
-  /usr/share/gtk-doc/html/gst-plugins-gl-plugins-0.10/up.png
-  /usr/share/locale/en/LC_MESSAGES/gst-plugins-gl-0.10.mo
-
-(libgstgl0.10_0)
-  /usr/bin/cyggstgl-0.10-0.dll
-
-(libgstgl0.10-devel)
-  /usr/include/gstreamer-0.10/gst/gl/gstglbuffer.h
-  /usr/include/gstreamer-0.10/gst/gl/gstgldisplay.h
-  /usr/include/gstreamer-0.10/gst/gl/gstglfilter.h
-  /usr/include/gstreamer-0.10/gst/gl/gstglshader.h
-  /usr/include/gstreamer-0.10/gst/gl/gstglwindow.h
-  /usr/lib/libgstgl-0.10.dll.a
-  /usr/lib/libgstgl-0.10.la
-  /usr/lib/pkgconfig/gstreamer-gl-0.10.pc
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/GstGLDisplay.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/GstGLFilter.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/GstGLShader.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/api-index.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/ch01.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/gst-plugins-gl-libs-0.10.devhelp
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/gst-plugins-gl-libs-0.10.devhelp2
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/gst-plugins-gl-libs-gettext.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/gst-plugins-gl-libs-gst-i18n-plugin.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/gst-plugins-gl-libs-gstglbuffer.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/gstreamer-libs-hierarchy.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/home.png
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/index.html
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/index.sgml
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/left.png
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/right.png
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/style.css
-  /usr/share/gtk-doc/html/gst-plugins-gl-libs-0.10/up.png
-
-------------------
-
 Port Notes:
+
+----- version 0.10.2-1 -----
+Version bump.
 
 ----- version 0.10.1-1 -----
 Initial release for Cygwin 1.7.
